[workspace]
resolver = "2"

members = [
	"attic",
	"client",
	"server",
	"token",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
attic = { path = "attic", default-features = false }
attic-token = { path = "token" }

anyhow = "1.0.98"
async-stream = "0.3.6"
base64 = "0.22.1"
bytes = "1.10.1"
chrono = "0.4.41"
clap = { version = "4.6", features = ["derive"] }
digest = "0.11.2"
displaydoc = "0.2.5"
enum-as-inner = "0.7.0"
futures = "0.3.31"
hex = "0.4.3"
humantime = "2.2.0"
lazy_static = "1.5.0"
regex = "1.11.1"
rsa = "0.10.0-rc.18"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.149"
serde_with = "3.19.0"
sha2 = "0.11.0"
tokio = "1.52.1"
tokio-stream = "0.1.18"
tokio-util = "0.7.18"
toml = "1.1.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
xdg = "3.0.0"
