[package]
name = "attic"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
async-stream = { workspace = true, optional = true }
base64.workspace = true
bytes.workspace = true
digest.workspace = true
displaydoc.workspace = true
futures.workspace = true
hex.workspace = true
lazy_static.workspace = true
regex.workspace = true
serde.workspace = true
serde_with.workspace = true
sha2.workspace = true

ed25519-compact = "2.2.0"
fastcdc = "4.0.1"
nix-base32 = "0.2.0"
pin-project = "1.1.10"
tempfile = "3"
wildmatch = "2.4.0"
nix-daemon = { git = "https://codeberg.org/blitz/gorgon.git", branch = "nix-daemon-2" }

[dependencies.tokio-util]
workspace = true
features = [
    "io"
]

[dependencies.tokio]
workspace = true
features = [
	"io-util",
	"macros",
	"sync",
	"fs",
	"process",
	"rt",
	"time",
]

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports", "async_tokio"] }
fastcdc = { version = "4.0.1", features = ["tokio"] }
serde_json.workspace = true

[features]
default = [
	"chunking",
	"io",
]

# Chunking.
chunking = ["io", "dep:async-stream"]

# IO utilities.
io = ["dep:async-stream"]

[[bench]]
name = "chunking"
harness = false
