[package]
name = "attic-client"
version.workspace = true
edition.workspace = true
publish = false

[[bin]]
name = "celler"
path = "src/main.rs"

[dependencies]
attic = { workspace = true, default-features = true }
attic-token = { workspace = true }

anyhow.workspace = true
bytes.workspace = true
chrono.workspace = true
clap = { workspace = true, features = ["env"] }
displaydoc.workspace = true
enum-as-inner.workspace = true
futures.workspace = true
humantime.workspace = true
lazy_static.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio-stream.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
xdg.workspace = true

async-channel = "2.5.0"
clap_complete = "4.6.3"
const_format = "0.2.36"
dialoguer = "0.12.0"
indicatif = "0.18.0"
notify = { version = "8.1.0", default-features = false, features = ["macos_kqueue"] }
reqwest = { version = "0.12.22", default-features = false, features = ["json", "rustls-tls", "rustls-tls-native-roots", "stream"] }

[dependencies.tokio]
workspace = true
features = [
	"fs",
	"io-std",
	"io-util",
	"macros",
	"process",
	"rt",
	"rt-multi-thread",
	"sync",
]
