[package]
name = "attic-server"
version.workspace = true
edition.workspace = true
publish = false

[lib]
name = "attic_server"
path = "src/lib.rs"

[[bin]]
name = "cellerd"
path = "src/main.rs"
doc = false

[dependencies]
attic = { workspace = true, default-features = false, features = ["chunking", "io"] }
attic-token.workspace = true

anyhow.workspace = true
async-stream.workspace = true
base64.workspace = true
bytes.workspace = true
chrono.workspace = true
clap.workspace = true
digest.workspace = true
displaydoc.workspace = true
enum-as-inner.workspace = true
futures.workspace = true
hex.workspace = true
humantime.workspace = true
regex.workspace = true
rsa.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
sha2.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-error = "0.2.1"
xdg.workspace = true

async-trait = "0.1.88"
aws-config = "1.8.16"
aws-sdk-s3 = "1.131.0"
axum = "0.8.9"
axum-macros = "0.5.0"
console-subscriber = "0.5.0"
derive_more = { version = "2.0.1", features = ["debug"] }
http-body-util = "0.1.3"
humantime-serde = "1.1.1"
itoa = "1.0.15"
rand = "0.10.1"
ryu = "1.0.20"
tokio-util = { version = "0.7.15", features = ["io"] }
tower-http = { version = "0.7.0", features = ["catch-panic", "trace"] }
uuid = { version = "1.23.1", features = ["v4"] }

[dependencies.tracing-subscriber]
workspace = true
features = ["json"]

[dependencies.async-compression]
version = "0.4.42"
features = [
	"tokio",
	"xz",
	"zstd",
	"brotli",
]

[dependencies.sea-orm]
version = "2.0.0-rc.40"
features = [
	"runtime-tokio-rustls",
	"macros",
	"sqlx-postgres",
	"sqlx-sqlite",
	"debug-print",
]

[dependencies.sea-orm-migration]
version = "2.0.0-rc.40"

# sea-orm currently pulls in sqlx 0.9.0. It has a regression that changes how
# the default username for postgres connections is determined. Workaround by
# explicitly enabling the `std` feature. Can be removed when sqlx has a new
# release.
#
# See: https://github.com/transact-rs/sqlx/pull/4303
[dependencies.whoami]
version = "2"
features = ["std"]

[dependencies.tokio]
workspace = true
features = [
	"fs",
	"io-util",
	"macros",
	"process",
	"rt",
	"rt-multi-thread",
	"sync",
]
